# langdict

./: CMakeLists.txt  config.c  input.c  main.c
global/: global.h  iristr.h
global/collections/: dictionary.h  dynarr.h  stack.h
gui/: border.c  gui.c  header.c  point.c
gui/include/: border.h  gui.h  header.h
gui/interaction/: text_box.c
gui/menus/: add_word.c  main_menu.c  menu.c  word_list.c
gui/menus/include/: add_word.h  main_menu.h  menu.h  word_list.h
gui/types/: interact.c  interact.h  point.h  visual.c  visual.h
gui/types/interaction/: button.c  button.h  text_box.c  text_box.h
include/: config.h  input.h
modes/: text_input.c  text_input.h
